@@ -1,0 +1,11 @@
+<h1>K-pop新勢力！Nmixx成首個登上告示牌拉丁音樂週的韓國偶像，將與拉丁樂壇巨星同台飆歌</h1>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Km71Rr9K-Bw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<p>韓國女子組合Nmixx將成爲首個參加告示牌拉丁音樂週的K-pop藝人。該活動是拉丁音樂行業中最大的盛事，今年是其第35周年。</p>
+<p>Nmixx的經紀公司JYP娛樂宣佈，Nmixx將以嘉賓身份參加告示牌拉丁音樂週。該活動將於10月14日至18日在迈阿密海滩菲尔莫尔剧院舉行，Nmixx將於10月16日參加活動，討論K-pop對拉丁音樂市場的影響。</p>
+<p>今年的活動將有超過100組樂隊和獨奏家參加，包括Grupo Frontera、阿尔瓦罗·迪亚兹和黛比·诺瓦。告示牌拉丁的首席內容官萊拉·科博表示，Nmixx的獨特動態能量將豐富該活動，並創造音樂文化之間的新合作機會。</p>
+<p>Nmixx於2022年出道，憑藉其扎實的現場表演和動態舞台表現穩步走紅。該六人組於8月19日發行了第三張迷你專輯《Fe3O4: Stick Out》，並以主打歌《See that?》引起關注。</p>
+<p>在赴美之前，該組合將於10月4日至6日在首爾獎忠體育館舉行第二場粉絲演唱會《Nmixx Change Up: Mixx Lab》。</p>
+
+<p>資料來源： Korea Herald</p>
